src/test/ui/duplicate-check-macro-exports.stderr
error: a macro named `panic` has already been exported
  --> $DIR/duplicate-check-macro-exports.rs:14:1
   |
LL | macro_rules! panic { () => {} } //~ ERROR a macro named `panic` has already been exported
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `panic` already exported
   |
note: previous macro export here
  --> $DIR/duplicate-check-macro-exports.rs:11:9
   |
LL | pub use std::panic;
   |         ^^^^^^^^^^

error: aborting due to previous error

